# goit-pythonweb-hw-12

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: alembic.ini  test.db
src/app/: main.py  settings.py
src/app/dependencies/: auth.py
src/app/helpers/api/: rate_limiter.py
src/app/helpers/email_sender/: email.py
src/app/repositories/contacts/: crud.py
src/app/repositories/users/: users.py
src/app/routers/auth/: auth.py  schemas.py
src/app/routers/contacts/: contacts.py  schemas.py
src/app/routers/users/: schemas.py  users.py
src/app/services/auth/: jwt_manager.py
src/app/services/contacts/: contact_service.py
src/app/services/file_services/: upload_service.py
src/app/services/user/: user_service.py
src/db/: database.py
src/db/models/: __init__.py  contact.py  user.py
src/docs/: conf.py  index.rst
src/docs/_build/doctrees/: environment.pickle  index.doctree
src/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/migrations/: env.py
src/migrations/versions/: 4a3acf42b916_add_to_model_user_filed_confirmed.py  4d3d645cae14_add_users_table.py  a1be75c7e0e1_add_additional_data_table.py  b61f62309727_fix_reletionship_user_contact.py  bc1442b1a9c3_add_user_relationship_to_the_contacts.py  f44a84eaf8da_initial_migration.py  fca877170cb3_add_emal_field_to_the_user.py  fdf2bb8087dc_add_avatar_and_craated_to_the_user.py  ff0ef6b3ae2b_add_user_roles_enum_and_role_column_to_.py
src/tests/: conftest.py
(+16 files in other folders)
